@@ -1,10 +1,6 @@
 // Internationalized strings
-define( {
-            "root": {
-                "title":"Simulation Example",
-                "showFrameRate":"Show Frame Rate",
-                "flipPolarity":"Flip Polarity",
-                "resetAll":"Reset All"
-            },
-            "fr": true
-        } );
+define(
+  {
+    "root": true,
+    "fr": true
+  } );
