@@ -1,4 +1,8 @@
 // French strings
-define( {
-            "title":"Simulation par Exemple"
-        } );
+define(
+  {
+    "title": "Simulation par Exemple",
+    "showFrameRate":"Montrer Images par Seconde",
+    "flipPolarity":"Polarit\u00E9 Intervt",
+    "resetAll": "Tout remettre \u00E0 z\u00E9ro"
+  } );
