@@ -1,0 +1,8 @@
+// English strings
+define(
+  {
+    "title": "Simulation Example",
+    "showFrameRate": "Show Frame Rate",
+    "flipPolarity": "Flip Polarity",
+    "resetAll": "Reset All"
+  } );
